--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.28.0
-pandas==1.2.1
-numpy==1.26.4
-matplotlib==3.7.1
-scipy==1.10.1
-scikit-learn==1.2.2
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+scipy>=1.11.0
